syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "github.com/sn/social-network/pkg/privacyservice;privacyservice";

service Privacy {
    rpc Create(PrivacyReq) returns (PrivacyReq) {
        option(google.api.http) = {
            post: "/api/v1/privacy"
            body: "*"
        };
    }
    rpc Update(PrivacyReq) returns (PrivacyReq) {
        option(google.api.http) = {
            put: "/api/v1/privacy"
            body: "*"
        };
    }
    rpc Delete(PrivacyId) returns (google.protobuf.Empty) {
        option(google.api.http) = {
            delete: "/api/v1/privacy"
        };
    }
    rpc Get(PrivacyId) returns (PrivacyReq) {
        option(google.api.http) = {
            get: "/api/v1/privacy"
        };
    }
}


message PrivacyReq {
    string parent_id = 1;
    int32 privacy = 2;
}

message PrivacyId {
    string parent_id = 1;
}
